# powielacz

./: .gitignore  .gitmodules  LICENSE  README.md  concept.md  main.py  pyproject.toml
data/: names.txt
docs/: day01.md  notes.md
notebooks/: bigram.ipynb  lesson01.ipynb  lesson02.ipynb
scripts/: prepare_pan_tadeusz.py  prepare_polish_names.py  sample_pan_tadeusz.py
src/: main.py
